[gd_scene load_steps=34 format=3 uid="uid://5okoypvk1d5n"]

[ext_resource type="Script" path="res://Scripts/Fighting.gd" id="1_6kt0r"]
[ext_resource type="Texture2D" uid="uid://40x5cad26dmt" path="res://Resources/MainMenu/button_short.png" id="1_sen2e"]
[ext_resource type="FontFile" uid="uid://b7lmplhatjpya" path="res://Resources/Other/PeaberryBase.ttf" id="2_bkm0p"]
[ext_resource type="Texture2D" uid="uid://cdbi4bavg67nq" path="res://Resources/MainMenu/cursor.png" id="3_jhlf5"]
[ext_resource type="Texture2D" uid="uid://dvqhlc4rkut5y" path="res://Resources/Fight/fighter1.png" id="4_oiwe0"]
[ext_resource type="Texture2D" uid="uid://diawmk0hu3c40" path="res://Resources/Fight/fighter2.png" id="5_xg1c0"]
[ext_resource type="Texture2D" uid="uid://bj31oaobg51h3" path="res://Resources/Fight/healthbar.png" id="6_7vv20"]
[ext_resource type="Texture2D" uid="uid://8b83eo5bpwvg" path="res://Resources/Cat/frontidle.png" id="6_wpncf"]
[ext_resource type="Texture2D" uid="uid://dxkkvq8iyy7n1" path="res://Resources/Other/Choice.png" id="9_8sub8"]
[ext_resource type="Texture2D" uid="uid://cl18klggiqky5" path="res://Resources/Enemy/enemyidle.png" id="9_ftn17"]
[ext_resource type="Texture2D" uid="uid://bl33mp6kkfcne" path="res://Resources/Fight/hitmaker.png" id="10_ysj7s"]
[ext_resource type="AudioStream" uid="uid://bmm2m2t2hc76d" path="res://Resources/Music/FUI Button Beep Clean.wav" id="12_guvyf"]
[ext_resource type="AudioStream" uid="uid://c5xg4lxg4grnf" path="res://Resources/Music/FUI Holographic Button Press-1.wav" id="13_hau1m"]
[ext_resource type="AudioStream" uid="uid://c0c6k6f2awl6c" path="res://Resources/Music/FUI Holographic Interaction Radiate.wav" id="14_uxxmb"]
[ext_resource type="AudioStream" uid="uid://bub4fbe8w0fkn" path="res://Resources/Music/hit.wav" id="16_dp467"]
[ext_resource type="AudioStream" uid="uid://bhcrhgpypw7kx" path="res://Resources/Music/Stream Loops 2024-02-07.ogg" id="16_ni1pa"]
[ext_resource type="AudioStream" uid="uid://wsm17k2g3d87" path="res://Resources/Music/missed.wav" id="17_3e1c3"]

[sub_resource type="LabelSettings" id="LabelSettings_xagw3"]
font = ExtResource("2_bkm0p")
font_size = 145
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpupv"]
atlas = ExtResource("6_wpncf")
region = Rect2(0, 0, 18, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4on3i"]
atlas = ExtResource("6_wpncf")
region = Rect2(19, 0, 18, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_7lpir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpupv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4on3i")
}],
"loop": true,
"name": &"front_idle",
"speed": 1.5
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g87xx"]
atlas = ExtResource("9_ftn17")
region = Rect2(1, 0, 16, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs77o"]
atlas = ExtResource("9_ftn17")
region = Rect2(18, 0, 16, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2qeu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g87xx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs77o")
}],
"loop": true,
"name": &"front_idle",
"speed": 1.5
}]

[sub_resource type="LabelSettings" id="LabelSettings_niyy3"]
font = ExtResource("2_bkm0p")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_cvyld"]
font = ExtResource("2_bkm0p")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_color = Color(1, 1, 1, 0)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_k6i2m"]
resource_name = "PromptText"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prompt/prompt/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_o58tr"]
resource_name = "QuestionText"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MathQuestion/prompt/Text:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_nqbo8"]
resource_name = "hitmaker"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Hitmaker/hitmaker:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/Hitmaker/hitmaker:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 10), Vector2(10, 10), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/Hitmaker/Label:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Hitmaker/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tddjs"]
resource_name = "lost"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Player:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/Enemy:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(2.08932, 1.41421),
"update": 0,
"values": [Vector2(0, 0), Vector2(451, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../background:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -30.0]
}

[sub_resource type="Animation" id="Animation_s4j36"]
resource_name = "start"
length = 4.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Player:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.6),
"transitions": PackedFloat32Array(1, 0.3),
"update": 0,
"values": [Vector2(-517, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main/Enemy:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 3.1),
"transitions": PackedFloat32Array(1, 6.78823),
"update": 0,
"values": [Vector2(451, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/Buttons:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.1, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(192, 160), Vector2(192, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../background:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-30.0, 1.0]
}

[sub_resource type="Animation" id="Animation_020fn"]
resource_name = "won"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.6818, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../background:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, -30.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/Enemy:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(2.08932, 1.41421),
"update": 0,
"values": [Vector2(0, 0), Vector2(451, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/Player:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-520, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77gv7"]
_data = {
"PromptText": SubResource("Animation_k6i2m"),
"QuestionText": SubResource("Animation_o58tr"),
"hitmaker": SubResource("Animation_nqbo8"),
"lost": SubResource("Animation_tddjs"),
"start": SubResource("Animation_s4j36"),
"won": SubResource("Animation_020fn")
}

[node name="Fighting" type="Node2D"]
script = ExtResource("1_6kt0r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="background" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 960.0
color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Buttons" type="Node2D" parent="CanvasLayer/Main"]
position = Vector2(192, 160)
metadata/_edit_group_ = true

[node name="Fight" type="TextureRect" parent="CanvasLayer/Main/Buttons"]
offset_left = 64.0
offset_top = 832.0
offset_right = 384.0
offset_bottom = 908.0
texture = ExtResource("1_sen2e")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Main/Buttons/Fight"]
layout_mode = 0
offset_left = 73.0
offset_top = 16.0
offset_right = 993.0
offset_bottom = 216.0
scale = Vector2(0.25, 0.25)
text = "Walcz"
label_settings = SubResource("LabelSettings_xagw3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cursor" type="TextureRect" parent="CanvasLayer/Main/Buttons/Fight"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(3, 3)
texture = ExtResource("3_jhlf5")
stretch_mode = 2

[node name="Check" type="TextureRect" parent="CanvasLayer/Main/Buttons"]
offset_left = 512.0
offset_top = 832.0
offset_right = 832.0
offset_bottom = 908.0
texture = ExtResource("1_sen2e")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/Main/Buttons/Check"]
layout_mode = 0
offset_left = 73.0
offset_top = 16.0
offset_right = 993.0
offset_bottom = 216.0
scale = Vector2(0.25, 0.25)
text = "Sprawd≈∫"
label_settings = SubResource("LabelSettings_xagw3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cursor" type="TextureRect" parent="CanvasLayer/Main/Buttons/Check"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(3, 3)
texture = ExtResource("3_jhlf5")
stretch_mode = 2

[node name="Player" type="Node2D" parent="CanvasLayer/Main"]
position = Vector2(-517, 0)
metadata/_edit_group_ = true

[node name="Surf" type="TextureRect" parent="CanvasLayer/Main/Player"]
offset_left = 112.0
offset_top = 624.0
offset_right = 189.0
offset_bottom = 653.0
scale = Vector2(5, 5)
texture = ExtResource("4_oiwe0")
stretch_mode = 2

[node name="Player" type="AnimatedSprite2D" parent="CanvasLayer/Main/Player"]
process_mode = 3
texture_filter = 1
position = Vector2(304, 704)
scale = Vector2(10.2963, 9.95183)
sprite_frames = SubResource("SpriteFrames_7lpir")
animation = &"front_idle"
autoplay = "front_idle"
frame_progress = 0.409036
offset = Vector2(0, -14)

[node name="health" type="ColorRect" parent="CanvasLayer/Main/Player"]
offset_left = 170.0
offset_top = 355.0
offset_right = 445.0
offset_bottom = 370.0
color = Color(0.45098, 0.435294, 0.921569, 1)

[node name="Healthbar" type="TextureRect" parent="CanvasLayer/Main/Player"]
offset_left = 160.0
offset_top = 345.0
offset_right = 218.0
offset_bottom = 352.0
scale = Vector2(5, 5)
texture = ExtResource("6_7vv20")
stretch_mode = 2

[node name="Enemy" type="Node2D" parent="CanvasLayer/Main"]
position = Vector2(451, 0)
metadata/_edit_group_ = true

[node name="Surf" type="TextureRect" parent="CanvasLayer/Main/Enemy"]
offset_left = 848.0
offset_top = 424.0
offset_right = 925.0
offset_bottom = 453.0
scale = Vector2(4, 4)
texture = ExtResource("5_xg1c0")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Enemy" type="AnimatedSprite2D" parent="CanvasLayer/Main/Enemy"]
z_index = 1
y_sort_enabled = true
position = Vector2(1000, 450)
scale = Vector2(7.1875, 7.1875)
sprite_frames = SubResource("SpriteFrames_x2qeu")
animation = &"front_idle"
autoplay = "front_idle"
offset = Vector2(0, -9)

[node name="health" type="ColorRect" parent="CanvasLayer/Main/Enemy"]
offset_left = 893.0
offset_top = 262.0
offset_right = 1113.0
offset_bottom = 274.0
color = Color(0.798554, 0.00118671, 0.89589, 1)
metadata/_edit_use_anchors_ = true

[node name="Healthbar" type="TextureRect" parent="CanvasLayer/Main/Enemy"]
offset_left = 885.0
offset_top = 254.0
offset_right = 943.0
offset_bottom = 261.0
scale = Vector2(4, 4)
texture = ExtResource("6_7vv20")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Hitmaker" type="Node2D" parent="CanvasLayer/Main"]
z_index = 2

[node name="hitmaker" type="TextureRect" parent="CanvasLayer/Main/Hitmaker"]
offset_left = 307.0
offset_top = 498.0
offset_right = 315.0
offset_bottom = 506.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(4, 4)
texture = ExtResource("10_ysj7s")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/Main/Hitmaker"]
offset_left = 386.0
offset_top = 473.0
offset_right = 528.0
offset_bottom = 513.0
text = "Missed"
label_settings = SubResource("LabelSettings_niyy3")
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="MathQuestion" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="prompt" type="TextureRect" parent="CanvasLayer/MathQuestion"]
offset_left = 328.0
offset_top = 274.0
offset_right = 536.0
offset_bottom = 322.0
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("9_8sub8")
stretch_mode = 5

[node name="Text" type="Label" parent="CanvasLayer/MathQuestion/prompt"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 789.0
offset_bottom = 156.0
scale = Vector2(0.25, 0.25)
label_settings = SubResource("LabelSettings_cvyld")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Option1" type="TextureRect" parent="CanvasLayer/MathQuestion"]
offset_left = 480.0
offset_top = 498.0
offset_right = 800.0
offset_bottom = 574.0
texture = ExtResource("1_sen2e")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MathQuestion/Option1"]
layout_mode = 0
offset_left = 73.0
offset_top = 16.0
offset_right = 993.0
offset_bottom = 216.0
scale = Vector2(0.25, 0.25)
label_settings = SubResource("LabelSettings_xagw3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cursor" type="TextureRect" parent="CanvasLayer/MathQuestion/Option1"]
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(3, 3)
texture = ExtResource("3_jhlf5")
stretch_mode = 2

[node name="Option2" type="TextureRect" parent="CanvasLayer/MathQuestion"]
offset_left = 480.0
offset_top = 610.0
offset_right = 800.0
offset_bottom = 686.0
texture = ExtResource("1_sen2e")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MathQuestion/Option2"]
layout_mode = 0
offset_left = 73.0
offset_top = 16.0
offset_right = 993.0
offset_bottom = 216.0
scale = Vector2(0.25, 0.25)
label_settings = SubResource("LabelSettings_xagw3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="cursor" type="TextureRect" parent="CanvasLayer/MathQuestion/Option2"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 19.0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(3, 3)
texture = ExtResource("3_jhlf5")
stretch_mode = 2

[node name="Prompt" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(0, 520)

[node name="prompt" type="TextureRect" parent="CanvasLayer/Prompt"]
offset_left = 328.0
offset_top = 274.0
offset_right = 536.0
offset_bottom = 322.0
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("9_8sub8")
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Text" type="Label" parent="CanvasLayer/Prompt/prompt"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 789.0
offset_bottom = 156.0
scale = Vector2(0.25, 0.25)
label_settings = SubResource("LabelSettings_cvyld")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_77gv7")
}

[node name="menu_navigate" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_guvyf")
volume_db = 6.0

[node name="menu_accept" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_hau1m")
volume_db = 6.0

[node name="menu_dialog" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_uxxmb")
volume_db = 6.0

[node name="background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ni1pa")
volume_db = -30.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_dp467")
volume_db = 12.0

[node name="missed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_3e1c3")
volume_db = 12.0

[connection signal="ready" from="." to="." method="_on_ready"]
